tests/baselines/reference/MemberFunctionDeclaration3_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration3_es6.ts(2,6): error TS2304: Cannot find name 'foo'.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration3_es6.ts (1 errors) ====
    class C {
       *[foo]() { }
         ~~~
!!! error TS2304: Cannot find name 'foo'.
    }